# vinfastauto

./: run_app.sh
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/components/: CustomHead.js
frontend/src/libs/: api.ts
frontend/src/pages/: index.tsx
