[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["duyanhhack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
peewee = "^3.15.4"
uvicorn = "^0.20.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "app.main:start"
# ./app/main.py -> start()